<resources>
    <string name="app_name">七萌会</string>

    <string name="main_reg">注册</string>

    <string name="main_login">登录</string>
    <string name="reg_user_hint">输入账号（数字+字母）</string>
    <string name="reg_password_hint">输入8位以上的密码</string>
    <string name="reg_password_confirm_hint">确认密码</string>
    <string name="reg_normal">注册</string>
    <string name="reg_suc">注册成功</string>
    <string name="reg_loading">正在注册...</string>
    <string name="reg_fail">注册失败</string>
    <string name="login_title">七匣子手游工会平台</string>
    <string name="login_user_hint">输入账号</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_normal">登陆</string>
    <string name="login_suc">登陆成功</string>
    <string name="login_loading">正在登陆...</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="change_pwd_tips">为保护您的账号安全，建议您设置较为复杂的密码，如英文+数字、大写英文+数字等，密码不可短于8位</string>
    <string name="change_pwd_old_pwd_hint">填写原密码</string>
    <string name="change_pwd_new_pwd_hint">填写新密码</string>
    <string name="change_pwd_new_pwd_confirm_hint">确认新密码</string>
    <string name="change_pwd_title">修改密码</string>
    <string name="change_pwd_submit">确认修改</string>
    <string name="change_pwd_submit_loading">修改中...</string>
    <string name="change_pwd_submit_fail">修改失败</string>
    <string name="change_pwd_submit_suc">修改成功</string>
    <string name="retrieve_pwd_tips">点击发送验证码，将验证码发送到您所填账号的安全手机，确认验证码后您可以重设密码。为绑定安全账号的用户无法使用该功能</string>
    <string name="retrieve_pwd_username_hint">填写平台账号</string>
    <string name="retrieve_pwd_code_hint">输入验证码</string>
    <string name="retrieve_pwd_send_code">发送验证码</string>
    <string name="retrieve_pwd_submit">找回密码</string>
    <string name="retrieve_pwd_submit_loading">验证中...</string>
    <string name="retrieve_pwd_submit_fail">验证失败</string>
    <string name="retrieve_pwd_submit_suc">验证成功</string>
    <string name="retrieve_pwd_title">找回密码</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="reset_pwd_tips">为保护您的账号安全，建议您设置较为复杂的密码，如英文+数字、大写英文+数字等，密码不可短于8位</string>
    <string name="reset_new_pwd">填写新密码</string>
    <string name="reset_new_pwd_confirm">确认新密码</string>
    <string name="reset_pwd_submit">确认修改</string>
    <string name="reset_pwd_submit_loading">修改中...</string>
    <string name="reset_pwd_submit_fail">修改失败</string>
    <string name="reset_pwd_submit_suc">修改成功</string>
    <string name="select_org_tips">尊敬的会长，请先登记您的工会信息以便工会成员能够快速找到您，工会信息之后可在左上角菜单中修改。</string>
    <string name="select_org_game_hint">选择游戏（可多选）</string>
    <string name="select_org_org_hint">填写工会名称</string>
    <string name="select_org_tips4member">亲爱的玩家，请先选择您的工会，找到组织才能享受更多福利哦~</string>
    <string name="select_org_game4member_hint">选择游戏</string>
    <string name="select_org_org4member_hint">选择工会</string>
    <string name="select_org_title">七匣子手游工会平台</string>
    <string name="select_org_submit">提交</string>
    <string name="select_org_submit_loading">提交中...</string>
    <string name="select_org_submit_suc">提交成功</string>
    <string name="select_org_submit_fail">提交失败</string>
    <string name="select_org_list_title">选择游戏</string>
    <string name="select_org_list_submit">选择完毕</string>
    <string name="union_title">工会平台</string>
    <string name="union_menu_union_info">工会信息</string>
    <string name="union_menu_union_check">入会审核</string>
    <string name="union_menu_change_pwd">修改密码</string>
    <string name="union_menu_bandle_phone">手机密保</string>
    <string name="union_menu_about_cash">提现资料</string>
    <string name="union_coin_num_tip">账户余额(匣币)</string>
    <string name="union_income_num_tip">今日收入(元)</string>
    <string name="union_all_income_num_tip">累计收入(元)</string>
    <string name="union_coin_to_cash_num_tip">可提现(元)</string>

    <string name="recharge_tips">匣币进货1元起充，匣币储备量不足时，工会成员将无法通过工会折扣充值匣币，敬请留意。</string>
    <string name="recharge_rmb_tip">进货金额</string>
    <string name="recharge_rmb_yuan">元</string>
    <string name="recharge_rmb_hint">输入金额</string>
    <string name="recharge_discount_tip">当前折扣</string>
    <string name="recharge_coin_num_tip">匣币数量</string>
    <string name="recharge_title">匣币进货</string>
    <string name="recharge_submit">充值</string>
    <string name="recharge_submit_loading">充值中...</string>
    <string name="recharge_submit_fail">充值失败</string>
    <string name="recharge_submit_suc">充值成功</string>

    <string name="carry_over_tips">手动充值功能可以让会长快速将匣币划转至其他玩家的账号，划转流水会和玩家充值流水一起显示在"账户管理-充值流水"类别内。</string>
    <string name="carry_over_to_hint">填写接收方账号</string>
    <string name="carry_over_to_confirm_hint">确认接收方账号</string>
    <string name="carry_over_coin_hint">填写划转匣币数量</string>
    <string name="carry_over_title">手动充值</string>
    <string name="carry_over_submit">确认划转</string>
    <string name="carry_over_submit_loading">划转中...</string>
    <string name="carry_over_submit_suc">划转成功</string>
    <string name="carry_over_submit_fail">划转失败</string>

    <string name="m_discount_tips">设置工会成员通过七匣子手游工会平台充值匣币时所享受的折扣，折扣上限不可超过工会渠道自身折扣。</string>
    <string name="m_discount_cur_discount_tip">当前折扣</string>
    <string name="m_discount_discount_precent">%</string>
    <string name="m_discount_discount_hint">输入折扣</string>
    <string name="m_discount_discount_tip">当前折扣</string>
    <string name="m_discount_mindiscount_tip">最低折扣</string>
    <string name="m_discount_title">工会折扣</string>
    <string name="m_discount_submit">设置折扣</string>
    <string name="m_discount_submit_loading">设置中...</string>
    <string name="m_discount_submit_fail">设置失败</string>
    <string name="m_discount_submit_suc">设置成功</string>
    <string name="m_discount_warn">注:折扣数额，即"花费原价的百分之几购买"，例如设置为70%，则工会成员充值价值10元的匣币，只需充值7元</string>

    <string name="cash_manager_title">账务管理</string>

    <string name="accout_2_day">本日:%s元</string>
    <string name="accout_2_week">本周(周一至周日):%s元</string>
    <string name="accout_2_mouth">本月(月初至月末):%s元</string>
    <string name="accout_2_all">总计:%s元</string>
    <string name="accout_2_usable_tip">当前可提现收入(元)</string>
    <string name="accout_2_left_btn">提现记录</string>
    <string name="accout_2_right_btn">申请提现</string>

    <string name="trade_detail_title">交易详情</string>

    <string name="coin_to_cash_title">资金提现</string>
    <string name="coin_to_cash_tips">会员自助充值的返点收入支持提现，若未设置提现资料，设置完成后，才可进行提现操作。</string>
    <string name="coin_to_cash">可提现收入:%s元</string>
    <string name="coin_to_cash_card">提现卡号:%s</string>
    <string name="coin_to_cash_num_tip">提现金额:</string>
    <string name="coin_to_cash_rmb_yuan">元</string>
    <string name="coin_to_cash_min">提现下限:%s元</string>
    <string name="coin_to_cash_remain">您本月还可体现:%s次</string>
    <string name="coin_to_cash_num_hint">输入提现金额</string>
    <string name="coin_to_cash_left_btn">提现记录</string>
    <string name="coin_to_cash_right_btn">提交申请</string>
    <string name="coin_to_cash_warn">注:若当前收入低于提现下限时，则无法进行提现，提现申请审核通过后的72小时内，提现收入将打入您预设的银行账号内，请注意查收。</string>

    <string name="coin_to_cash_record_title">提现记录</string>


    <string name="user_info_tips">您还未设置提现信息，请先进行设置后再进行提现操作。</string>
    <string name="user_info_name_hint">填写开户人真实姓名</string>
    <string name="user_info_card_info_hint">填写开户银行，如"工商银行"</string>
    <string name="user_info_card_num_hint">填写银行卡号</string>
    <string name="user_info_id_tips">身份证照片(正反面各一张)</string>
    <string name="user_info_submit">保存资料</string>
    <string name="user_info_submit_suc">保存成功</string>
    <string name="user_info_submit_loading">保存中...</string>
    <string name="user_info_submit_fail">保存失败</string>
    <string name="user_info_title">提现设置</string>
    <string name="user_info_warn">注:若因信息填写错误，导致体现金额错发，相关责任与后果由填写者自行承担。</string>

    <string name="bind_phone_tip">安全手机作为您找回密码的安全措施，能够有效保护您的账号安全</string>
    <string name="bind_phone_num_hint">填写手机号码</string>
    <string name="bind_phone_num_tip">当前绑定手机号码:%s</string>
    <string name="bind_phone_code_hint">输入验证码</string>
    <string name="bind_phone_code_button">发送验证码</string>
    <string name="bind_phone_bind_submit">绑定手机</string>
    <string name="bind_phone_unbind_submit">解除绑定</string>
    <string name="bind_phone_bind_submit_loading">绑定中...</string>
    <string name="bind_phone_bind_submit_suc">绑定成功</string>
    <string name="bind_phone_bind_submit_fail">绑定失败</string>
    <string name="bind_phone_unbind_submit_loading">解绑中...</string>
    <string name="bind_phone_unbind_submit_suc">解绑成功</string>
    <string name="bind_phone_unbind_submit_fail">解绑失败</string>
    <string name="bind_phone_title">绑定安全手机</string>


    <string name="load_more">加载更多</string>
    <string name="msg_waitting_loading">正在加载中，请稍后...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
