<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kding.kdingcoinprepaid.v.activity.LoginActivity">

    <include layout="@layout/common_toolbar"
        android:id="@+id/common_toolbar"/>


    <TextView
        android:layout_below="@+id/common_toolbar"
        android:id="@+id/login_title"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size_header"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/login_title"
        android:id="@+id/textInputLayout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_hint"
            android:textSize="@dimen/text_size_title"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout_user"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_below="@+id/textInputLayout_password"
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/login_normal"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_title"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorError="@color/red_error"
        app:pb_colorNormal="?attr/colorPrimary"
        app:pb_colorPressed="?attr/colorPrimaryDark"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/login_suc"
        app:pb_textError="@string/login_fail"
        app:pb_textProgress="@string/login_loading" />

    <TextView
        android:id="@+id/button_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/activity_login"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/colorTextTitle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/login_forget_pwd"/>

</RelativeLayout>
