<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kding.kdingcoinprepaid.v.activity.RegisterActivity">

    <include layout="@layout/common_toolbar"
        android:id="@+id/common_toolbar"/>

    <TextView
        android:id="@+id/reset_pwd_tips"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/text_size_title"
        android:text="@string/reset_pwd_tips"
        android:layout_below="@+id/common_toolbar"
        android:textColor="@color/colorTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_pwd_tips"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reset_new_pwd"
            android:textSize="@dimen/text_size_title"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/textInputLayout_password"
        android:id="@+id/textInputLayout_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title"
            android:hint="@string/reset_new_pwd_confirm"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_below="@+id/textInputLayout_password_confirm"
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/reset_pwd_submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_title"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorError="@color/red_error"
        app:pb_colorNormal="?attr/colorPrimary"
        app:pb_colorPressed="?attr/colorPrimaryDark"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/reset_pwd_submit_suc"
        app:pb_textError="@string/reset_pwd_submit_fail"
        app:pb_textProgress="@string/reset_pwd_submit_loading" />

</RelativeLayout>
